--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Cerebro SLAM'
+date: 2019-04-30
+permalink: /posts/2019/04/slam/
 tags:
   - cool posts
   - category1
@@ -10,11 +10,36 @@ tags:
 
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
 
-Headings are cool
+Cerebros SLAM
 ======
 
-You can have many headings
-======
+# 1. Introduction to SLAM
 
-Aren't headings cool?
-------
+Add content
+
+
+
+
+# 5. Pose Net
+We worked on the architecture proposed in the paper Relative Camera Pose Estimation Using CNN [https://arxiv.org/abs/1702.01381]. The relative camera pose is $\Delta P$ can be divided into two separate components i.e Translation ($\Delta T$) and Rotation ($\Delta R$). The Translation is a relative position vector $\Delta T$ (3-dimensional quantity) and  Rotation is relative orientation vector $\Delta R$ (4-dimensional quaternion).
+
+## 5.1 Architecture
+
+The model involves extracting features from the images using convolutional layers and followed by fully-connected layers. The network is obtained by removing the last three fully-connected layers layers (FC6, FC7 and FC8) from the original Hybrid-CNN preserving only convolutional, max-pooling layers
+and ReLU. The Hybrid-CNN is a AlexNet fine tuned on Places Dataset. The architecture is shown below. Both the branches share weights.
+
+
+The output of the final convolutional layer is of the shape 13x13x128. We pass two frames through the network and obtain their representations.
+
+Then we merge both the representations and get 13x13x256 vector. The regression part in turn is composed of two fully-connected (FC1 and FC2) layers, where FC1 and FC2 have 4 and 3 connections respectively for estimating the 7-dimensional pose vector.
+
+The loss function is given below:
+
+$ L = ||\Delta T - ||\Delta \hat{T} || + \beta *  ||\Delta Q - ||\Delta \hat{Q} ||$
+
+## 5.3 Results
+
+ ## Error :  Root Mean Square error
+ Tx, Ty, Tz, Qw, Qx, Qy, Qz = 0.78792044, 0.04065268, 0.08842828, 0.01129969, 0.06170158, 0.37319901, 0.48971555
+
+ 
