--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -201,5 +201,5 @@ $$ L  =   |  \Delta  T - \Delta \hat{T}   |   + \beta *    |  \Delta Q - \Delta 
   * Literature Survey for Pose Recognition. Implementing Pose Recognition. Testing Pose Recognition.
 * Akarsh Goyal
   * Implementing Pose Recognition. Testing Pose Recognition. Testing translation from Tensorflow to C++ for integration.
-* Abhay Goyal
+* Abhay Atrish
   * Literature Survey for Place Recognition. Implementing Place Recognition. Testing Place Recognition.
