--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -3,9 +3,11 @@ title: 'Cerebro SLAM'
 date: 2019-04-30
 permalink: /posts/2019/04/slam/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - SLAM
+  - Deep Learning
+  - ORB-slam
+  - Tensorflow
+  - KITTI
 ---
 
 Cerebros SLAM
