--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -13,6 +13,7 @@ tags:
 Cerebros SLAM
 ======
 
+![SLAM](/images/slam.jpg)
 # 1. Introduction to SLAM
 
 Implementation of navigation system that uses artificial landmarks or a priori known maps of the environment, and accurate sensor systems to get precise measurements of the landmarks or map features, is straightforward for today’s robots. Similarly, the task of building a map of the environment given the exact position of the robot is largely a solved problem. However, it is much harder to solve the complete problem simultaneously, enabling a mobile robot to build a map of an unexplored environment while simultaneously using this map to localize itself.
